[package]
name = "oidc-jwt-validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.1.1"
openidconnect = "2.4.0"
tokio = { version = "1.22.0", features = ["full"] }
thiserror = "1.0.37"
reqwest = { version = "0.11.13", features = ["json"] }
serde = "1.0.147"
base64 = "0.13.1"
