[package]
name = "oidc-jwt-validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]




[dependencies]
jsonwebtoken = "8.1.1"
tokio = { version = "1.22.0", features = ["sync"] }
thiserror = "1.0.37"
reqwest = { version = "0.11.13", features = ["json"] }
serde = {version = "1.0.147", features = ["derive"] }
base64 = "0.13.1"
log = "0.4.17"

[dev-dependencies]
actix-web = {version = "4.2.1"}
tokio = { version = "1.22.0", features = ["full"] }