[package]
name = "oidc-jwt-validator"
version = "0.2.3"
edition = "2021"
license = "MIT"
include = ["/src", "LICENSE.txt", "/examples"]
repository = "https://github.com/MinisculeGirraffe/oidc_jwt_validator"
description = "Batteries included validaton of Access Tokens from an OIDC Provider"
readme = "README.md"

[dependencies]
jsonwebtoken = "9"
tokio = { version = "1.22.0", features = ["sync"] }
thiserror = "1.0.37"
reqwest = { version = "0.11.13", default-features = false, features = ["json"] }
serde = {version = "1.0.147", features = ["derive"] }
base64 = "0.22.0"
log = "0.4.17"

[dev-dependencies]
actix-web = {version = "4.2.1"}
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
